<resources>
    <string name="app_name">Instnt</string>
    <string name="yes">Yes</string>
    <string name="ok">Ok</string>
    <string name="custom_form">Custom Form</string>
    <string name="default_form">Default Form</string>
    <string name="get_form_code">Get Form Code</string>
    <string name="form_data">Form Data</string>
    <string name="submit">Submit</string>
    <string name="response">Response</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="setup">Setup</string>
</resources>
