<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DefaultFormActivity"
    android:padding="20dp"
    android:orientation="vertical">

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/transparent">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/formid"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="Form Key"
           android:background="@color/transparent"/>
   </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Switch
            android:id="@+id/sandbox_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sandbox"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/get_form_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_form_code"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:text="@string/form_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            android:enabled="false"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white_1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="15dp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_centerVertical="true"/>

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white_1"
        >

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/result"
            android:text="No Response"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:padding="5dp"
            android:singleLine="false"/>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>