<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DefaultFormActivity"
    android:padding="20dp"
    android:orientation="vertical">

   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/transparent">

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/formid"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="Form Key"
           android:background="@color/transparent"/>
   </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Switch
            android:id="@+id/sandbox_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sandbox"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/get_form_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:text="@string/form_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            android:enabled="false"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/container_step1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:layout_marginTop="20dp"
                    android:text="Fill up the form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:text="Submit OTP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:text="Capture Photos of your ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:text="Take Selfie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:layout_marginTop="20dp"
                    android:text="Verify and Approve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_step2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/container_step3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/container_step4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white_1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:visibility="gone">

                <Button
                    android:id="@+id/verify_document"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Verify Document"
                    android:layout_gravity="center_horizontal"
                    android:layout_alignParentEnd="true"
                    android:textAllCaps="false"
                    android:enabled="true"/>
            </LinearLayout>

            <Button
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Previous"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:textAllCaps="false"
                android:enabled="false"/>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentEnd="true"
                android:textAllCaps="false"
                android:enabled="true"/>

            <TextView
                android:layout_marginTop="20dp"
                android:text="@string/response"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/result"
                android:text="No Response"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:padding="5dp"
                android:singleLine="false"
                android:background="@color/white_1"
                android:minHeight="300dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>